# FRDM-k64f-VSCODE-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  arm-none-eabi-gcc.cmake  project.yml
openocd/board/: frdm-k64f.cfg
src/: buttons.c  buttons.h  leds.c  leds.h  main.c
src/hal/: gpio_hal.c  gpio_hal.h
test/: test_buttons.c  test_leds.c
